# routerify

./: .gitignore  Cargo.toml  README.md  releez.yml  roadmap.md  routerify.design.txt  rustfmt.toml  tusk.yml
.github/workflows/: test.yml
examples/: README.md  aws_lambda.rs  error-handling.rs  error_handling.rs  error_handling_with_custom_errors.rs  error_handling_with_request_info.rs  handle_404_pages.rs  main.rs  middleware.rs  request_duration.rs  route_parameters.rs  scoped_router.rs  share_data_and_state.rs  simple_example.rs  ssl.rs  test-with-heavy-loads.rs  test.rs  test2.rs  test_stream_body.rs  test_with_heavy_loads.rs  using_stream_body.rs
src/: error.rs  ext.rs  handlers.rs  helpers.rs  lib.rs  size_unit.rs  types.rs
src/body/: mod.rs
src/constants/: mod.rs
src/data_map/: map.rs  mod.rs  scoped.rs  shared.rs
src/ext/: mod.rs  request.rs
src/helpers/: mod.rs
src/middleware/: mod.rs  post.rs  pre.rs
src/prelude/: mod.rs
src/regex_generator/: mod.rs
src/route/: mod.rs  regex_generator.rs
src/router/: builder.rs  mod.rs
src/service/: mod.rs  request_service.rs  router_service.rs
src/types/: mod.rs  path_params.rs  request_context.rs  request_info.rs  request_meta.rs  route_params.rs
src/utility/: mod.rs
src/utility/handlers/: mod.rs
src/utility/middlewares/: cors.rs  keep_alive.rs  mod.rs  query.rs
src/utility/pipe/: mod.rs  reader.rs  writer.rs
src/utility/response/: mod.rs
tests/: integration.rs
tests/support/: mod.rs
