[package]
name = "routerify"
version = "2.2.0"
description = "A lightweight, idiomatic, composable and modular router implementation with middleware support for the Rust HTTP library hyper.rs."
homepage = "https://github.com/routerify/routerify"
repository = "https://github.com/routerify/routerify"
keywords = ["hyper", "hyper-rs", "router", "routing", "middleware"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = ["hyper-http1"]
all = []
hyper-http1 = ["hyper/http1"]
hyper-http2 = ["hyper/http2"]

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["server", "tcp"] }
http = "0.2"
regex = { version = "1", default-features = false, features = ["std"] }
lazy_static = "1"
percent-encoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

# For the AWS Lambda example
aws_lambda_events = "0.4.0"
lambda_http = { package = "netlify_lambda_http", version = "0.2.0" }
slog = "2"
sloggers = "1.0"
url = "2"
