[package]
name = "routerify"
version = "2.2.1"
description = "A lightweight, idiomatic, composable and modular router implementation with middleware support for the Rust HTTP library hyper.rs."
homepage = "https://github.com/routerify/routerify"
repository = "https://github.com/routerify/routerify"
keywords = ["hyper", "hyper-rs", "router", "routing", "middleware"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = []
all = []
_tls = ["async-stream", "tokio", "futures-util", "ct-logs"]
native-tls = ["_tls", "openssl", "hyper-openssl", "tokio-openssl"]
tls-rustls = ["_tls", "rustls", "hyper-rustls", "tokio-rustls", "rustls-pemfile"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
regex = "1"
lazy_static = "1"
percent-encoding = "2"
# For async SSL streams
async-stream = { version = "0.3.0", optional = true }
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"], optional = true }
futures-util = { version = "0.3.1", default-features = false, optional = true }
ct-logs = { version = "0.9", optional = true }
# For async SSL streams using rustls
rustls = { version = "0.20", optional = true }
hyper-rustls = { version = "0.22", optional = true }
rustls-pemfile = { version = "0.2", optional = true }
tokio-rustls = { version = "0.22", optional = true }
# For async SSL streams using openssl
openssl = { version = "0.10", optional = true }
hyper-openssl = { version = "0.9", optional = true }
tokio-openssl = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "io-std", "macros", "net", "rt-multi-thread"] }
futures = "0.3"
# For the AWS Lambda example
aws_lambda_events = "0.4.0"
lambda_http = { package = "netlify_lambda_http", version = "0.2.0" }
slog = "2"
sloggers = "1.0"
url = "2"

[[example]]
name = "ssl"
path = "examples/ssl.rs"
required-features = ["tls-rustls"]